cmake_minimum_required(VERSION 3.12)
project(sweep_problem)

set(CMAKE_CXX_STANDARD 11)

add_executable(hw2 library.cpp)
add_executable(rd remove_dup.cpp)
add_executable(rd2 remove_dup2.cpp)
add_executable(regular_match regular_match.cpp)
add_executable(is_num is_num.cpp)
add_executable(find_circle find_circle.cpp find_dup.cpp find_dup.h)
add_executable(short_path short_path.cpp)
add_executable(sub_struct sub_struct.cpp)
add_executable(mirror mirror.cpp)
add_executable(mat_print mat_print.cpp)
add_executable(move_range move_range.cpp)
add_executable(decode decode.cpp)
add_executable(reconstruct reconstruct.cpp)
add_executable(qs quicksort.cpp)
add_executable(cb colorful_bricks.cpp)
add_executable(maze maze.cpp)
add_executable(big bignumber.cpp)
add_executable(pin1 pinduoduo1.cpp)
add_executable(pin2 pinduoduo2.cpp)
add_executable(pin3 pinduoduo3.cpp)
add_executable(pin4 pinduoduo4.cpp)
add_executable(test testcpp.cpp)
add_executable(long longest01str.cpp)
add_executable(draw bytedance_draw.cpp)
add_executable(move_box bytedance_move_box.cpp)
add_executable(move_bfs bytedance_move_bfs.cpp)
add_executable(bytedance_room bytedance_room.cpp)
add_executable(byte1 bytedance_1.cpp)
add_executable(byte2 bytedance_2.cpp)
add_executable(byte3 bytedance_3.cpp)
add_executable(longest  ./leetcode/longest_mountain_in_array.cpp)
add_executable(candy ./leetcode/candy.cpp)
add_executable(guandeng ./luogu/guandengwenti.cpp)
add_executable(interger ./leetcode/intergerbreak.cpp)
add_executable(cable ./other/cable_master.cpp)
add_executable(circle_point ./other/poj_circle_and_points.cpp)
add_executable(meet_room ./other/meeting_room.cpp)
add_executable(longes_order ./other/longest_ordered.cpp)
add_executable(three_sum ./leetcode/three_sum.cpp)
add_executable(two_sum ./leetcode/two_sum.cpp)
add_executable(trap_water ./leetcode/trapping_rain_water.cpp)
add_executable(jiaocuo01 ./qiuzhao/wangyi_jiaocuo01.cpp)
add_executable(caozuoxulie  ./qiuzhao/wangyi_caozuo.cpp)
add_executable(ranse ./qiuzhao/aiqiyi_ranse.cpp)
add_executable(aiqiyisort ./qiuzhao/aiqiyi_sort.cpp)
add_executable(sub_sum_k ./leetcode/subarray_sum_k.cpp)
add_executable(sub_string  ./leetcode/longest_substring.cpp)
add_executable(dominoes ./leetcode/push_dominoes.cpp)
add_executable(mycalendar  ./leetcode/mycalendar.cpp)
add_executable(remove_dupl ./leetcode/Remove_Duplicates.cpp)
add_executable(number_of_islands ./leetcode/numbers_of_islands.cpp)
add_executable(median_of_two ./leetcode/Median_of_Two.cpp)
add_executable(largetst_rect  ./leetcode/largest_rectangle.cpp)
add_executable(maximal_rect  ./leetcode/maximal_rectangle.cpp)
add_executable(max_square ./leetcode/maximal_square.cpp)
add_executable(most_water ./leetcode/container_with_most_water.cpp)
add_executable(trapwater2 ./leetcode/TrappingRainWater2.cpp)
add_executable(path_to_get_key ./leetcode/Shortest_Path_to_Get_All_Keys.cpp)
add_executable(edit_dis ./leetcode/edit_distance.cpp)
add_executable(nqueens ./leetcode/N_Queens.cpp)
add_executable(mindistance ./leetcode/mindistance.cpp)
add_executable(binary_tree ./leetcode/binary_tree_maximum.cpp)
add_executable(longest_univalue_path ./leetcode/Longest_Univalue_Path.cpp)
add_executable(root_to_leaf  ./leetcode/sum_root_to_leaf.cpp)
add_executable(re_match ./leetcode/Regular_Expression_Matching.cpp)
add_executable(generate_parentesi ./leetcode/Generate_Parentheses.cpp)
add_executable(numdistinct  ./leetcode/distinct_subsequenece.cpp)
add_executable(palindrome ./leetcode/palindrome_partition.cpp)
add_executable(fork_test ./os/fork_learn.cpp)
add_executable(w2v  ./os/word2vec.c)
add_executable(mthread ./os/multthread.cpp)
add_executable(fstack  ./os/function_stack.cpp)
add_executable(create_exit ./os/thread_create_exit.cpp)
add_executable(merge_k_sort ./leetcode/merge_k_sorted.cpp)
add_executable(merge_two ./leetcode/merge_two_sorted.cpp)
add_executable(hmm ./os/hmm.cpp)
add_executable(sell_stock ./leetcode/sell_stock.cpp)
add_executable(single_num ./leetcode/single_number.cpp)
add_executable(longest_valid ./leetcode/Longest_Valid_Parentheses.cpp)
add_executable(permut ./leetcode/permutate.cpp)
add_executable(parenthses ./qiuzhao/parenthesse.cpp)
add_executable(parenthes_Badi ./qiuzhao/baidu_parenth.cpp)
add_executable(min_add_valid ./leetcode/Minimum_Parentheses_Valid.cpp)
add_executable(rand10 ./leetcode/rand10)
add_executable(width_of_tree ./leetcode/width_of_tree.cpp)
add_executable(seek_test  ./os/fseek_test.cpp)
add_executable(pind1 ./qiuzhao/pingduoduo1.cpp)
add_executable(pind2 ./qiuzhao/pingduoduo2.cpp)
add_executable(pind3 ./qiuzhao/pingduoduo3.cpp)
add_executable(pind4 ./qiuzhao/pinduoduo4.cpp)
add_executable(msoft1 ./qiuzhao/msoft.cpp)
add_executable(pal_seq ./leetcode/palindromic_seq.cpp)
add_executable(palindrom_part ./leetcode/palindrom_part2.cpp)
add_executable(wangyi2 ./qiuzhao/wangyi2.cpp)
add_executable(wangyi1 ./qiuzhao/wangyi1.cpp)
add_executable(tengxu1 ./qiuzhao/tengxu1.cpp)
add_executable(tengxu2 ./qiuzhao/tengxu2.cpp)
add_executable(tengxu3 ./qiuzhao/tengxu3.cpp)
add_executable(xiechen1 ./qiuzhao/xiecheng1.cpp)
add_executable(xiechen2 ./qiuzhao/xiecheng2.cpp)
add_executable(redudant_connect ./leetcode/Redundant_Connection.cpp)
add_executable(yuanjin1 ./qiuzhao/yuanjing1.cpp)
add_executable(yuanjin2 ./qiuzhao/yuanjin2.cpp)
add_executable(non-negative ./leetcode/non-negative-intergers.cpp)
add_executable(rever_pair  ./leetcode/reverse_pair.cpp)
add_executable(alimatch ./qiuzhao/ali_match.cpp)
add_executable(huaw1  ./qiuzhao/huawei1.cpp)
add_executable(huaw2 ./qiuzhao/huawei2.cpp)
add_executable(huaw3 ./qiuzhao/huawei3.cpp)
add_executable(hua4 ./qiuzhao/huaw4.cpp)
add_executable(unique_path ./leetcode/unique_paths.cpp)
add_executable(aliba1 ./qiuzhao/alibaba.cpp)
add_executable(aliba2 ./qiuzhao/alibaba2.cpp)
add_executable(jdong1 ./qiuzhao/jindong.cpp)
add_executable(jdong2 ./qiuzhao/jingdong2.cpp)
add_executable(reorder_lst ./leetcode/reorder_list.cpp)
add_executable(find_min ./leetcode/find_minmum_in_rotated.cpp)
add_executable(inorder_traversal ./leetcode/Binary_Tree_Inorder_Traversal.cpp)
add_executable(flat_binary ./leetcode/flatten_binary_tree.cpp)
add_executable(sum_left_leaf ./leetcode/sum_of_left_leaf.cpp)
add_executable(delete_bst ./leetcode/delete_in_bst.cpp)
add_executable(find_bottom_left ./leetcode/Find_Bottom_left_Tree_Value.cpp)
add_executable(diameter_of_tree ./leetcode/diameter_of_binary_tree.cpp)
add_executable(search2d ./leetcode/search.cpp)
add_executable(3sumclose ./leetcode/3sumclose.cpp)
add_executable(spiral_mat ./leetcode/spiral_mat.cpp)
add_executable(rect_area ./leetcode/rectangle_area.cpp)
add_executable(courser_sh ./leetcode/course_schedul.cpp)
add_executable(point_on_line ./leetcode/max_points_on_line.cpp)
add_executable(k_largest ./leetcode/kth_largest_element.cpp)
add_executable(ugly_num ./leetcode/ugly_num.cpp)
add_executable(mtuan1 ./qiuzhao/meituan1.cpp)
add_executable(mt2 ./qiuzhao/mtuan2)
add_executable(reverlist2 ./leetcode/reverse_list2.cpp)
add_executable(list_cycle ./leetcode/Linked_list_cycle.cpp)
add_executable(conv2bin ./leetcode/convert2bin.cpp)
add_executable(bst2list ./leetcode/bst2doublelist.cpp)
add_executable(constructbinary ./leetcode/construct_binary_tree.cpp)
add_executable(seri ./leetcode/serial.cpp)
add_executable(orca ./os/orca.cpp)
add_executable(eggdrop ./leetcode/supereggdrop.cpp)
add_executable(sum_of_aver   ./leetcode/largest_sum_of_aver.cpp)
target_link_libraries(w2v pthread m)
target_link_libraries(mthread pthread)
target_link_libraries(create_exit pthread)